docs: Add comprehensive Javadoc, overhaul documentation, and harden security
Phase 12 — Documentation overhaul:
- Rewrite README.md: replace VodozemacAccount with Account, update test count
  (6→71) and Java version (17→25), expand API reference to cover all classes,
  update project structure and cross-platform table (macOS Intel disabled)
- Fix 7 Javadoc issues: ed25519Key @return, "recieved from the sebder" typos,
  @link parameter types (String→byte[]), @InheritDoc→@inheritDoc, wrong class
  names in close() Javadoc
- Fix Sample.java: stray ": +" in log messages, wrong attribution on line 62
- Remove fake GPG key from SECURITY.md, standardize email to gmail.com
- Translate 5 French error messages + 2 comments to English in NativeLibraryLoader
- Create CODE_OF_CONDUCT.md (Contributor Covenant 2.1)

Phase 13 — Security hardening:
- Make OlmSession and InboundCreationResult constructors package-private;
  change Rust JNI nativeCreateOutboundSession to construct OlmSession directly
  via env.new_object instead of returning a raw long
- Set owner-only POSIX file permissions on extracted native library
- Add --enable-native-access=ALL-UNNAMED to surefire argLine

Comprehensive Javadoc update (18 Java files):
- Add class-level and method Javadoc to all 6 exception classes, 2 enum classes,
  5 data/result classes, NativeLibraryLoader, OutboundGroupSession (10 methods),
  InboundGroupSession (15 methods), and OlmSession (class-level + fixes)
- Fix Account.java: correct createInboundSession @return type, remove
  AccountPickle reference, add @throws tags throughout
- All Javadoc based on vodozemac 0.10.0 Rust doc comments, adapted for Java