@@ -5,9 +5,9 @@ as well as issues identified in the code review (`CODE_REVIEW.md`).
 It is organized into phases by priority, with each phase being independently deliverable.
 
 Phases 2-7, 9 cover missing vodozemac features.
-Phases 12-14 cover code review fixes (security hardening, build/config, documentation, and refactoring).
+Phase 14 covers code review fixes (refactoring and deduplication).
 
-**Completed phases:** Phase 1 (InboundGroupSession session management), Phase 8 (Granular error types), Phase 10 (Code quality and duplication fixes), and Phase 11 (Build and configuration fixes) have been implemented. Phase 13.3 (cause chaining for VodozemacException) was implemented as part of Phase 8.
+**Completed phases:** Phase 1 (InboundGroupSession session management), Phase 8 (Granular error types), Phase 10 (Code quality and duplication fixes), Phase 11 (Build and configuration fixes), Phase 12 (Documentation overhaul), and Phase 13 (Security hardening) have been implemented. Phase 13.3 (cause chaining for VodozemacException) was implemented as part of Phase 8.
 
 ---
 
@@ -202,149 +202,6 @@ Expose `Ed25519PublicKey`, `Ed25519Signature`, `Curve25519PublicKey` as Java typ
 
 ---
 
-## Phase 12: Documentation overhaul (Medium priority)
-
-Addresses CODE_REVIEW.md findings DOC1-DOC10, C15, S1, S4, DOC7.
-
-### 12.1 Rewrite README.md to match actual API
-
-The README references `VodozemacAccount` (a class that doesn't exist), says "6 test cases"
-(actual: 46), and shows an outdated architecture diagram.
-
-- **Class name**: Replace all `VodozemacAccount` references with `Account` (`README.md:60,65,89,112,119,124,132`)
-- **Import statements**: Update example imports from `io.github.fherbreteau.vodozemac.VodozemacAccount`
-  to `io.github.fherbreteau.vodozemac.account.Account`
-- **Test count**: Update "6 test cases" to actual count (`README.md:20`)
-- **Architecture**: Update project structure to show `olm/` and `megolm/` modules instead of
-  flat `rust/src/lib.rs` (`README.md:155`)
-- **API reference**: Update to list all actual methods on `Account` (identityKeys, maxNumberOfOneTimeKeys,
-  generateOneTimeKeys, storedOneTimeKeyCount, getUnpublishedOneTimeKeys, generateFallbackKey,
-  getUnpublishedFallbackKey, forgetFallbackKey, markKeysAsPublished, pickle/unpickle, dehydrated device)
-- **Cross-platform table**: Remove or mark macOS Intel as unsupported (commented out in CI)
-
-### 12.2 Fix Javadoc typos and inaccuracies
-
-| # | File | Line | Fix |
-|---|---|---|---|
-| 1 | `Account.java` | :50 | `@return a base 64 representation of the public Curve25519 key` → `Ed25519 key` |
-| 2 | `Account.java` | :107 | `recieved from the sebder` → `received from the sender` |
-| 3 | `Account.java` | :278 | `@link Account#toDehydratedDevice(String)` → `@link Account#toDehydratedDevice(byte[])` |
-| 4 | `Account.java` | :307 | `@InheritDoc` → `@inheritDoc` |
-| 5 | `OlmSession.java` | :131 | `@InheritDoc` → `@inheritDoc` |
-| 6 | `OutboundGroupSession.java` | :74 | `@InheritDoc` → `@inheritDoc`, `Account` → `OutboundGroupSession` |
-| 7 | `InboundGroupSession.java` | :70 | `@InheritDoc` → `@inheritDoc`, `Account` → `InboundGroupSession` |
-
-### 12.3 Fix `Sample.java` log messages
-
-- `Sample.java:52`: Says `"Bob: Received message"` but this is Alice decrypting Bob's reply → `"Alice: Received message"`
-- `Sample.java:62`: Same issue → `"Alice: Received message"`
-
-### 12.4 Replace or remove fake GPG key in SECURITY.md
-
-`SECURITY.md:22-33` contains a placeholder GPG key with repetitive `QJ5QJ5...` data.
-
-- **Option A**: Replace with the maintainer's real GPG public key
-- **Option B**: Remove the GPG section entirely and direct users to email/Matrix only
-- **Recommendation**: Option B if no real key is available; a fake key is worse than no key
-
-### 12.5 Standardize contact information
-
-Inconsistent contact emails across files:
-
-| File | Current | |
-|---|---|---|
-| `SECURITY.md` | `security@fherbreteau.io` | |
-| `CHANGELOG.md` | `fherbreteau@protonmail.com` | |
-| `pom.xml` | `fherbreteau@gmail.com` | |
-
-- **Action**: Pick one authoritative email and use it consistently
-- **Recommendation**: Use `fherbreteau@gmail.com` (from pom.xml) everywhere, or set up a
-  dedicated `security@` address and use it in both SECURITY.md and pom.xml
-
-### 12.6 Standardize error messages to English in `NativeLibraryLoader`
-
-`NativeLibraryLoader.java` has French error messages while the rest of the codebase uses English.
-
-| Line | Current (French) | Replacement (English) |
-|---|---|---|
-| :49 | `"Impossible de charger la librairie native pour "` | `"Failed to load native library for "` |
-| :63 | `"OS non supporté: "` | `"Unsupported OS: "` |
-| :72 | `"Architecture non supportée: "` | `"Unsupported architecture: "` |
-| :86 | `"OS non supporté: "` | `"Unsupported OS: "` |
-| :92 | `"Ressource native introuvable: "` | `"Native resource not found: "` |
-
-### 12.7 Create `CODE_OF_CONDUCT.md` or remove reference
-
-`CONTRIBUTING.md:22` references `CODE_OF_CONDUCT.md` which does not exist.
-
-- **Option A**: Create a `CODE_OF_CONDUCT.md` (e.g., Contributor Covenant 2.1)
-- **Option B**: Remove the "Code of Conduct" section and link from `CONTRIBUTING.md`
-- **Recommendation**: Option A for community projects
-
-### Estimated effort: 0 code logic changes, documentation only
-
----
-
-## Phase 13: Security hardening (Medium priority)
-
-Addresses CODE_REVIEW.md findings S3, S5, S6, S7, C3, C9, C10, C11.
-
-### 13.1 Make `OlmSession` constructor package-private
-
-`OlmSession.java:8` has a public constructor that accepts a raw `long nativePtr`, allowing
-any caller to construct a session with an arbitrary pointer.
-
-- **Java**: Change `public OlmSession(long nativePtr)` to `OlmSession(long nativePtr)`
-  (package-private)
-- **Impact**: `InboundCreationResult` (same package `io.github.fherbreteau.vodozemac.olm`)
-  can still call it; `Account` calls `nativeCreateOutboundSession` which returns a `long`,
-  then constructs `OlmSession` — `Account` is in a different package
-  (`io.github.fherbreteau.vodozemac.account`), so it needs access
-- **Design decision**: Either move `OlmSession` to the same package as `Account`, or create a
-  package-private factory method, or keep public but document the constraint
-
-### 13.2 Make `InboundCreationResult` constructor package-private
-
-`InboundCreationResult.java:10` has a public constructor accepting `long sessionPtr` and
-`byte[] plaintext`, exposing the raw native pointer.
-
-- **Java**: Change `public InboundCreationResult(long sessionPtr, byte[] plaintext)` to
-  package-private
-- **Impact**: Only `Account` (via JNI `nativeCreateInboundSession`) constructs this — `Account`
-  is in a different package
-- **Design decision**: Same as 13.1 — need cross-package access solution
-
-### 13.3 Set restrictive permissions on extracted native library
-
-`NativeLibraryLoader.java:96-106` extracts the native library to a temp directory but does
-not set file permissions, potentially allowing other users to read/modify the library.
-
-- **Java**: After `Files.copy()`, set owner-only permissions:
-  ```java
-  Files.setPosixFilePermissions(tempLib,
-      Set.of(PosixFilePermission.OWNER_READ, PosixFilePermission.OWNER_WRITE));
-  ```
-- **Fallback**: On Windows (no POSIX permissions), use `tempLib.toFile().setReadable(false, false)`
-  and `setWritable(false, false)` to restrict access for other users
-
-### 13.4 Add `--enable-native-access=ALL-UNNAMED` for Java 25+ compatibility
-
-The JVM warns about restricted native access when calling `System.load()`. On Java 25+,
-this may become a hard error.
-
-- **pom.xml**: Add to `maven-surefire-plugin` argLine:
-  `--enable-native-access=ALL-UNNAMED`
-- **Documentation**: Document the requirement in README for consumers of the library
-
-### 13.5 Fix Javadoc `@link` with wrong method signature
-
-- `Account.java:278`: `@link Account#toDehydratedDevice(String)` should be
-  `@link Account#toDehydratedDevice(byte[])` — the actual method takes `byte[]`, not `String`
-
-### Estimated effort: ~0 JNI functions, security hardening (VodozemacException cause chaining done in Phase 8)
-
----
-
 ## Phase 14: Refactoring — common base class and deduplication (Low priority)
 
 Addresses CODE_REVIEW.md duplication items 5.1-5.8. This phase reduces maintenance burden
@@ -490,8 +347,8 @@ All 4 `nativeFree` functions are identical except for the Rust type.
 | 9. Utilities                       | Low      | ~3            | 1            | New `utils/`     |
 | ~~10. Code quality & duplication~~ | ~~High~~ | ~~Done~~    | ~~Done~~     | ~~Done~~         |
 | ~~11. Build & configuration~~      | ~~High~~ | ~~Done~~    | ~~Done~~     | ~~Done~~         |
-| 12. Documentation overhaul          | Medium   | N/A           | N/A          | N/A (docs only)  |
-| 13. Security hardening             | Medium   | ~0            | ~0           | N/A              |
+| ~~12. Documentation overhaul~~     | ~~Medium~~ | ~~Done~~   | ~~Done~~     | ~~Done~~         |
+| ~~13. Security hardening~~         | ~~Medium~~ | ~~Done~~   | ~~Done~~     | ~~Done~~         |
 | 14. Refactoring & deduplication    | Low      | ~0            | ~3           | Existing `helpers.rs` |
 | **Remaining total**                |          | **~58**       | **~23**      | **4 new + helpers** |
 
@@ -501,29 +358,29 @@ All 4 `nativeFree` functions are identical except for the Rust type.
 |---|---|---|
 | C1: Typo `createOutbpundSession` | Phase 7 | 7.4 |
 | ~~C2: Wrong `checkNotClosed()` error messages~~ | ~~Phase 10~~ | ~~Done~~ |
-| C3: `OlmSession` constructor is public | Phase 13 | 13.1 |
+| ~~C3: `OlmSession` constructor is public~~ | ~~Phase 13~~ | ~~Done~~ |
 | ~~C4-C7: Missing key validation in Megolm~~ | ~~Phase 10~~ | ~~Done~~ |
 | ~~C8: Unused import in Rust tests~~ | ~~Phase 10~~ | ~~Done (already absent)~~ |
 | ~~C9: `VodozemacException` no cause chaining~~ | ~~Phase 13~~ | ~~Done (Phase 8)~~ |
-| C10: `InboundCreationResult` constructor public | Phase 13 | 13.2 |
-| C11: Javadoc `@link` wrong signature | Phase 13 | 13.5 |
+| ~~C10: `InboundCreationResult` constructor public~~ | ~~Phase 13~~ | ~~Done~~ |
+| ~~C11: Javadoc `@link` wrong signature~~ | ~~Phase 13~~ | ~~Done~~ |
 | ~~C12: `pom.xml` mainClass wrong~~ | ~~Phase 11~~ | ~~Done~~ |
 | ~~C13: `helpers.rs:wrap()` uses `unwrap()`~~ | ~~Phase 10~~ | ~~Done~~ |
 | ~~C14: Rust JNI `.unwrap()` on `convert_byte_array`~~ | ~~Phase 10~~ | ~~Done~~ |
-| C15: README imports `VodozemacAccount` | Phase 12 | 12.1 |
+| ~~C15: README imports `VodozemacAccount`~~ | ~~Phase 12~~ | ~~Done~~ |
 | ~~D1: Undefined Maven property~~ | ~~Phase 11~~ | ~~Done~~ |
 | ~~D2: Stale root `Cargo.lock`~~ | ~~Phase 11~~ | ~~Done~~ |
 | ~~D3: Java version mismatch~~ | ~~Phase 11~~ | ~~Done~~ |
-| DOC1-DOC4: README inaccuracies | Phase 12 | 12.1 |
-| DOC5-DOC6: `Sample.java` wrong log messages | Phase 12 | 12.3 |
-| DOC7: Missing `CODE_OF_CONDUCT.md` | Phase 12 | 12.7 |
-| DOC8-DOC10: Javadoc typos | Phase 12 | 12.2 |
-| S1: Fake GPG key in SECURITY.md | Phase 12 | 12.4 |
+| ~~DOC1-DOC4: README inaccuracies~~ | ~~Phase 12~~ | ~~Done~~ |
+| ~~DOC5-DOC6: `Sample.java` wrong log messages~~ | ~~Phase 12~~ | ~~Done~~ |
+| ~~DOC7: Missing `CODE_OF_CONDUCT.md`~~ | ~~Phase 12~~ | ~~Done~~ |
+| ~~DOC8-DOC10: Javadoc typos~~ | ~~Phase 12~~ | ~~Done~~ |
+| ~~S1: Fake GPG key in SECURITY.md~~ | ~~Phase 12~~ | ~~Done~~ |
 | ~~S2: Missing key validation (Megolm)~~ | ~~Phase 10~~ | ~~Done~~ |
-| S3: Native pointer exposed in `InboundCreationResult` | Phase 13 | 13.2 |
-| S4: Inconsistent contact info | Phase 12 | 12.5 |
-| S5: French error messages | Phase 12 | 12.6 |
-| S6: Temp file permissions | Phase 13 | 13.3 |
-| S7: `System.load` restricted warning | Phase 13 | 13.4 |
+| ~~S3: Native pointer exposed in `InboundCreationResult`~~ | ~~Phase 13~~ | ~~Done~~ |
+| ~~S4: Inconsistent contact info~~ | ~~Phase 12~~ | ~~Done~~ |
+| ~~S5: French error messages~~ | ~~Phase 12~~ | ~~Done~~ |
+| ~~S6: Temp file permissions~~ | ~~Phase 13~~ | ~~Done~~ |
+| ~~S7: `System.load` restricted warning~~ | ~~Phase 13~~ | ~~Done~~ |
 | 5.1-5.8: Duplicated code patterns | Phase 14 | 14.1-14.6 |
 | ~~JaCoCo coverage not enforced~~ | ~~Phase 11~~ | ~~Done~~ |
